# e-prompt-exam

./: .env.example  .gitignore  Dockerfile  README.md  gastos_cartao_credito.csv  generated_readme.md  guard.py  main.py  prompt.py  pyproject.toml  testes.ipynb
