[project]
name = "01-eprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "guardrails-ai==0.6.0",
    "guardrails-api-client==0.4.0a1",
    "ipykernel>=6.29.5",
    "ipython>=8.30.0",
    "openai>=1.56.0",
    "pydantic>=2.10.2",
    "python-dotenv>=1.0.1",
]
